--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^1.4.1",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
